--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
-.container-fluid{
-    margin-top: 10%;
+.round-button {
+	border-radius: 24px;
 }
 
 tr, th {
@@ -75,7 +75,7 @@ tr, th {
 
 ::-webkit-scrollbar-track
 {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
 }
 
@@ -87,7 +87,7 @@ tr, th {
 
 ::-webkit-scrollbar-thumb
 {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
 .tooltip-inner  {
@@ -95,4 +95,54 @@ tr, th {
     white-space:pre; /* you can also try white-space: normal; */
     max-width:none;
 
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+#img-upload{
+    width: 100%;
+}
+
+.input-group{
+    display: contents;
+    border-radius: 24px;
+}
+
+.btn-file {
+    margin-bottom: 10px !important;
+    border-radius: 24px !important;
+    border-bottom-right-radius: 24px !important;
+    border-top-right-radius: 24px !important;
+}
+
+.input-group-addon{
+    width: 10px !important;
+    border-radius: 10px !important;
+}
+
+.control-label{
+    margin-bottom: 0 !important;
+    padding-top: 0px !important;
+}
+
+.form-control{
+    border-radius: 12px !important;
 }
