Added leading bord entries and new tour form

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -131,9 +131,8 @@ a[data-toggle="collapse"] {
 }
 
 ul ul a {
-  font-size: 0.9em !important;
-  padding-left: 30px !important;
-  background: #6d7fcc;
+  font-size: 1.5em !important;
+  text-align: center;
 }
 
 ul.CTAs {
