--- a/src/css/bootstrap-custom.css
+++ b/src/css/bootstrap-custom.css
@@ -36,11 +36,6 @@
     border-radius: 24px;
 }
 
-.input-group-addon{
-    width: 10px !important;
-    border-radius: 10px !important;
-}
-
 .control-label{
     margin-bottom: 0 !important;
     padding-top: 0px !important;
@@ -120,7 +115,7 @@ tr, th {
 
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
-    background-color: #D2B48C !important;
+    font-weight: bold;
 }
 
 .navbar{
@@ -129,4 +124,13 @@ tr, th {
 
 .navbar-brand{
     margin-left: 20px !important;
+    padding-top: 20px; 
 }
+ .nav li{
+     padding-top: 3px;
+ }
+
+ .form-group{
+    margin-right: 5px !important;
+    margin-left: 5px !important;
+ }
